--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -16,6 +16,7 @@ $font-family: 'Noto Sans JP','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic P
 
 $primary-color: #000;
 $black_color: #191919;
+$black-color-01: #121212;
 
 $secondary-color: #ccc;
 
@@ -25,8 +26,8 @@ $white-color: #fff;
 
 $gradient-bg: transparent linear-gradient(61deg, #0497B5 0%, #53D2B2 100%) 0% 0% no-repeat padding-box;
 
-$blue-color: #0497B5; 
-$blue-color-1: #00758C; 
+$blue-color: #0497B5;
+$blue-color-1: #00758C;
 
 $gray-color: #F1F1F1;
 $gray-color-2: #A7A7A7;
