--- a/app/pages/no35/index.njk
+++ b/app/pages/no35/index.njk
@@ -80,7 +80,8 @@
       <div class="section-wrapper-secondary">
         <h3 class="ttl-tertiary">個々の課題に寄り添う豊富なサービスラインナップ</h3>
 
-        <p>さまざまなビジネスシーンで発生するニーズや課題に寄り添い、お客様の声をもとに最適なサービスを開発・提供し続けています。<br>お客様のニーズに合わせた柔軟な対応力が評価され、45万社以上のお客様に選ばれ続けています。<br>是非皆様のお悩みをお聞かせ下さい。
+        <p>
+          さまざまなビジネスシーンで発生するニーズや課題に寄り添い、お客様の声をもとに最適なサービスを開発・提供し続けています。<br>お客様のニーズに合わせた柔軟な対応力が評価され、45万社以上のお客様に選ばれ続けています。<br>是非皆様のお悩みをお聞かせ下さい。
         </p>
 
         <div class="anc container">
@@ -120,65 +121,14 @@
 
   <section class="section-tertiary">
     <div class="container-1200">
-      <h2 class="ttl-secondary">クレディセゾンが選ばれる理由</h2>
+      <h2 class="ttl-secondary">個人事業主から中小企業からまで</h2>
 
-      <div class="section-wrapper-primary flex gap60">
-        <div class="section-txt">
-          <h3 class="ttl-tertiary">ビジネス成功をサポートする「潤沢な人材リソース」</h3>
-
-          <p>世の中に溢れる多様な企業支援ツールの中から、本当にご自身の事業に必要なサービスを見極めるのは難しいもの。
-          </p>
-
-          <p>クレディセゾンでは専任の担当者が、皆様のお困りごとを伺い、解決策を共に考え、最適なサポートを提案いたします。もちろん、導入後のサポートもお任せください。
-          </p>
-
-          <p>そんな思いで、日々ビジネスワーカーの方々と向き合っています。</p>
-
-          <p>
-            経験豊富なコンサルタントやカスタマーサポートなど、豊富な人材リソースで顔の見えるサービスを提供いたします。</p>
-        </div>
-
-        <div class="section-img">
-          <img src="/assets/img/common/img-strength-02.png" alt="">
-        </div>
-      </div>
-
-      <div class="section-wrapper-secondary">
-        <h3 class="ttl-tertiary">個々の課題に寄り添う豊富なサービスラインナップ</h3>
-
-        <p>さまざまなビジネスシーンで発生するニーズや課題に寄り添い、お客様の声をもとに最適なサービスを開発・提供し続けています。<br>お客様のニーズに合わせた柔軟な対応力が評価され、45万社以上のお客様に選ばれ続けています。<br>是非皆様のお悩みをお聞かせ下さい。
+      <div class="section-wrapper flex gap60">
+        <p>立場がかわれば最適なサービスは異なるものです。クレディセゾンでは、個人事業主様、<br>中小企業様から大企業様向けサービスまで幅広くラインアップしています。
         </p>
 
-        <div class="anc container">
-          <div class="containers">
-            <ul class="flex gap30 inherit anc__box">
-              <li>
-                <a href="#" class="anc__box_image_1">
-                  <span>ビジネスカードを作りたい</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="anc__box_image_2">
-                  <span>経費を削減したい</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="anc__box_image_3">
-                  <span>業務を効率化したい</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="anc__box_image_4">
-                  <span>資金繰りを改善したい</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="anc__box_image_5">
-                  <span>資金繰りを改善したい</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="section-btn">
+
         </div>
       </div>
     </div>
