fix ui homepage

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -55,8 +55,8 @@
     <div class="nav__dropdown__search">
       <div class="nav__dropdown__search__container">
         <div class="nav__dropdown__search__title">目的から探す</div>
-        <a class="blue__outline__button">
-          <span class="blue__outline__button__tittle">サービス一覧を見る</span>
+        <a class="bondi_blue_outline_btn">
+          <span class="bondi_blue_outline_btn__tittle">サービス一覧を見る</span>
         </a>
       </div>
     </div>
