--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -81,9 +81,7 @@
         <ul class="flex jcC gap30 inherit anc__box">
           <li>
             <a href="#">
-              <div class="anc__box__img">
-                <img src="/assets/img/common/smes.png" alt="For SMEs">
-              </div>
+              <div class="anc__box__img smes"></div>
               <div class="anc__box__content">
                 <span class="font-20px">中小企業様向け</span>
                 <span class="font-16px">サービスはこちら</span>
@@ -98,9 +96,7 @@
           </li>
           <li>
             <a href="#">
-              <div class="anc__box__img">
-                <img src="/assets/img/common/sole_proprietors.png" alt="For Sole Proprietors">
-              </div>
+              <div class="anc__box__img sole"></div>
               <div class="anc__box__content">
                 <span class="font-20px">個人事業主様向け</span>
                 <span class="font-16px">サービスはこちら</span>
@@ -368,7 +364,7 @@
     <h3 class="ttl-tertiary">セミナー・イベント情報</h3>
     <div class="sec-news container">
       <div class="containers">
-        <div class="flex nowrap gap30">
+        <div class="flex jcC nowrap gap30">
           <div href="#" class="sec-news__box">
             <div class="sec-news__box--info">
               <dl class="flex aiC gap12 sec-news__box--item-primary">
@@ -542,7 +538,7 @@
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
       <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
-      <div class="useful-wp">
+      <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
             <div href="#" class="card">
