--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -25,6 +25,7 @@ $tertiary-color: #eee;
 $white-color: #fff;
 
 $gradient-bg: transparent linear-gradient(61deg, #0497B5 0%, #53D2B2 100%) 0% 0% no-repeat padding-box;
+$gradient-bg-2: transparent linear-gradient(90deg, #111111 0%, #444444 100%) 0% 0% no-repeat padding-box;
 
 $blue-color: #0497B5;
 $blue-color-1: #00758C;
