--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -1,6 +1,6 @@
 .home-page {
   margin: auto;
-  padding: 140px 0 0px;
+  padding: 130px 0 0;
 
   .section-welcome {
     position: relative;
@@ -17,6 +17,8 @@
 
           img {
             height: 100%;
+            object-fit: cover;
+            object-position: 0 4px;
           }
         }
       }
@@ -41,6 +43,7 @@
     }
 
     .ttl-tertiary {
+      position: relative;
       display: inline-block;
       font-size: 21px;
       font-weight: normal;
@@ -112,9 +115,15 @@
             }
           }
           &__img {
+            width: 116px;
             height: 90px;
-            img {
-              height: 100%;
+            background-repeat: no-repeat;
+            background-size: contain;
+            &.smes {
+              background-image: url("/assets/img/common/smes.png");
+            }
+            &.sole {
+              background-image: url("/assets/img/common/sole_proprietors.png");
             }
           }
           &__content {
@@ -130,7 +139,7 @@
   }
 
   .secondary-section {
-    padding: 70px 120px;
+    padding: 70px 0;
     background-color: $gray-color;
 
     .ttl-primary {
@@ -210,7 +219,7 @@
 
   .tertiary-section {
     text-align: center;
-    padding: 70px 120px;
+    padding: 70px 0;
 
     .ttl-primary {
       font-size: 32px;
@@ -296,7 +305,7 @@
 
   .quaternary-section {
     text-align: center;
-    padding: 70px 120px;
+    padding: 70px 0;
     background-color: $gray-color;
 
     .ttl-secondary {
@@ -316,7 +325,7 @@
           max-width: 380px;
           padding: 30px;
           background-color: $white-color;
-          box-shadow: 0px 3px 20px $gray-color-4;
+          box-shadow: 0 3px 20px $gray-color-4;
 
           .ttl-quaternary {
             color: $blue-color;
@@ -433,7 +442,7 @@
   }
 
   .quinary-section {
-    padding: 70px 120px;
+    padding: 70px 0;
 
     .ttl-tertiary {
       text-align: center;
@@ -460,7 +469,7 @@
           width: auto;
           max-width: 380px;
           padding: 30px 32px 30px 32px;
-          box-shadow: 0px 3px 20px $gray-color-4;
+          box-shadow: 0 3px 20px $gray-color-4;
 
           .ttl-quaternary {
             text-align: left;
@@ -565,7 +574,7 @@
 
   .senary-section {
     background-color: #f7f7f7;
-    padding: 70px 120px;
+    padding: 70px 0;
 
     .ttl-tertiary {
       text-align: center;
@@ -590,16 +599,22 @@
 
         .sec-news__box {
           background-color: #fff;
-          box-shadow: 0px 3px 20px $gray-color-4;
+          box-shadow: 0 3px 20px $gray-color-4;
           padding: 30px 30px 30px 39px;
           margin-bottom: 30px;
           border: none;
           .ttl-tertiary {
             margin-bottom: 20px;
+            font-size: 20px;
           }
           .sec-news__box--info {
             border-bottom: 1px solid $gray-color-3;
             margin-bottom: 32px;
+            .black_pill_btn {
+              &.small {
+                border-radius: 30px;
+              }
+            }
           }
 
           .sec-news__box--item-primary {
@@ -685,7 +700,7 @@
 
   .septenary-section {
     background-color: #fff;
-    padding: 70px 120px;
+    padding: 70px 0;
 
     .ttl-tertiary {
       text-align: center;
@@ -726,6 +741,11 @@
               width: auto;
               font-size: 16px;
             }
+            .black_pill_btn {
+              &.small {
+                border-radius: 30px;
+              }
+            }
           }
         }
       }
@@ -754,7 +774,7 @@
     background-image: url("/assets/img/common/contact_banner.png");
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 70px 120px;
+    padding: 70px 0;
     &::before {
       content: "";
       position: absolute;
