--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1890,7 +1890,7 @@
   background-image: url("/assets/img/common/contact_banner.png");
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 70px 120px;
+  padding: 70px 0;
   &::before {
     content: "";
     position: absolute;
