--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -20,11 +20,11 @@ header {
     }
     .nav__list {
       &__item {
-        margin: 17px 0 6px 0;
+        margin-top: 17px;
         &__button {
           color: $white-color;
           padding: 6px 20px 12px 20px;
-          background-color: $primary-color;
+          background: $gradient-bg-2;
           border-radius: 3px;
           line-height: initial;
         }
@@ -36,6 +36,7 @@ header {
             a {
               padding: 10px 0;
               position: relative;
+              font-weight: 500;
               &::before {
                 content: "";
                 width: 0%;
@@ -43,7 +44,7 @@ header {
                 background-color: #333;
                 display: block;
                 position: absolute;
-                bottom: 5px;
+                bottom: 0;
                 left: 50%;
                 transform: translateX(-50%);
                 transition: all 0.3s linear;
@@ -66,6 +67,7 @@ header {
         height: 100%;
         padding: 0px 16px;
         vertical-align: middle;
+        font-weight: 700;
       }
     }
     .nav__item__dropdown {
@@ -118,7 +120,7 @@ header {
         font-size: 22px;
         margin-bottom: 20px;
       }
-      .blue__outline__button {
+      .bondi_blue_outline_btn {
         max-width: 200px;
         padding: 12px 23px;
         color: $blue-color;
