--- a/app/pages/no35/index.njk
+++ b/app/pages/no35/index.njk
@@ -5,6 +5,11 @@
 {% set description = "" %}
 {% set keywords = "" %}
 
+{% set breadcrumb = [{
+text:"当社の強み",
+link:"#"
+}] %}
+
 {# Page settings and also body class #}
 {% set page = "" %}
 
@@ -123,12 +128,28 @@
     <div class="container-1200">
       <h2 class="ttl-secondary">個人事業主から中小企業からまで</h2>
 
-      <div class="section-wrapper flex gap60">
+      <div class="section-wrapper">
         <p>立場がかわれば最適なサービスは異なるものです。クレディセゾンでは、個人事業主様、<br>中小企業様から大企業様向けサービスまで幅広くラインアップしています。
         </p>
 
-        <div class="section-btn">
+        <div class="section-btn flex gap30">
+          <a href="#" class="bondi_blue_btn">
+            <span>個人事業主様向けサービス</span>
 
+            <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+            </svg>
+          </a>
+
+          <a href="#" class="bondi_blue_btn">
+            <span>中小企業様向けサービス</span>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
+              <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
+                transform="translate(0 7.548) rotate(-45)" fill="none" stroke="#fff" stroke-width="2" />
+            </svg>
+          </a>
         </div>
       </div>
     </div>
