--- a/app/pages/no35/index.njk
+++ b/app/pages/no35/index.njk
@@ -5,13 +5,14 @@
 {% set description = "" %}
 {% set keywords = "" %}
 
-{% set breadcrumb = [{
-text:"当社の強み",
-link:"#"
-}] %}
-
 {# Page settings and also body class #}
 {% set page = "" %}
+
+{# Breadcrumb #}
+{% set breadcrumb = [{
+  text:"当社の強み",
+  link:"#"
+  }] %}
 
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
