--- a/app/pages/case/index.njk
+++ b/app/pages/case/index.njk
@@ -8,6 +8,12 @@
 {# Page settings and also body class #}
 {% set page = "" %}
 
+{# Breadcrumb #}
+{% set breadcrumb = [{
+  text:"導入事例",
+  link:"#"
+  }] %}
+
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
 
@@ -16,6 +22,7 @@
 
 {# Main content #}
 {% block content %}
+
 
 <main class="case-page">
   <section class="section-welcome">
@@ -223,17 +230,6 @@
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="breadcrumb">
-    <ul class="flex">
-      <li>
-        <a href="#">TOP</a>
-      </li>
-      <li>
-        <a href="#">資金繰りを改善したい</a>
-      </li>
-    </ul>
   </section>
 </main>
 {% endblock %}
