--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="no12-page">
+  <main class="business_card_creation-page">
     <section class="section-welcome">
       <div class="container-1200">
         <h3 class="ttl-tertiary">自分に合ったビジネスカードを。</h3>
