--- a/app/pages/reduction_expenses/index.njk
+++ b/app/pages/reduction_expenses/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="no13-page">
+<main class="reduction_expenses-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h3 class="ttl-tertiary">様々な間接コストを削減！</h3>
