--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -23,7 +23,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="no35-page">
+<main class="strength-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h2 class="ttl-secondary">クレディセゾンの強み</h2>
