--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="no16-page">
+<main class="welfare-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h3 class="ttl-tertiary">人材の定着・従業員のモチベーションUPに。</h3>
