--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-<main class="no15-page">
+<main class="improve_cash_flow-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h3 class="ttl-tertiary">法人経営者様・個人事業主様へ。</h3>
