fix ui sp homepage

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -51,7 +51,7 @@
       </div>
     </div>
   </div>
-  <div class="nav__dropdown__list__search">
+  <div class="nav__dropdown__list__search pc-only">
     <div class="nav__dropdown__search">
       <div class="nav__dropdown__search__container">
         <div class="nav__dropdown__search__title">目的から探す</div>
@@ -127,7 +127,7 @@
       </ul>
     </div>
   </div>
-  <div class="nav__dropdown__list__support">
+  <div class="nav__dropdown__list__support pc-only">
     <div class="nav__dropdown__search">
       <div class="nav__dropdown__search__container">
         <div class="nav__dropdown__search__title">サポート情報</div>
@@ -176,9 +176,58 @@
       </ul>
     </div>
   </div>
+  <div class="nav__dropdown__sp sp-only">
+    <ul>
+      <li>
+        <a href="#">
+          <span>クレディセゾンの強み</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
+              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>中小企業様向け</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
+              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>個人事業主様向け</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
+              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>目的から探す</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
+              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>サポート情報</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0"
+              transform="translate(0 7.924) rotate(-45)" fill="none" stroke="#0497b5" stroke-width="3" />
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 
-   {# This is for preventing all min js errors #}
-   <div class="show"></div>
-   <div class="hide"></div>
-   <div class="floating"></div>
+  {# This is for preventing all min js errors #}
+  <div class="show"></div>
+  <div class="hide"></div>
+  <div class="floating"></div>
 </header>
