--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -37,6 +37,9 @@ $grid-breakpoints: (
   }
   &.nowrap {
     flex-wrap: nowrap;
+    @media #{$sp} {
+      flex-wrap: wrap;
+    }
   }
   &.inherit {
     @media #{$sp} {
