--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -83,7 +83,7 @@
             <a href="#">
               <div class="anc__box__img smes"></div>
               <div class="anc__box__content">
-                <span class="font-20px">中小企業様向け</span>
+                <span class="font-20px font-md-16px">中小企業様向け</span>
                 <span class="font-16px">サービスはこちら</span>
               </div>
               <div class="anc__box__svg">
