--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -17,6 +17,10 @@ header {
       @media (min-width: 1440px) {
         width: 350px;
       }
+      @media #{$sp}{
+        width: 200px;
+        margin-left: 20px;
+      }
     }
     .nav__list {
       &__item {
@@ -84,6 +88,9 @@ header {
           }
         }
       }
+    }
+    @media #{$sp}{
+      justify-content: space-between;
     }
   }
   .nav__dropdown {
@@ -163,6 +170,39 @@ header {
           display: flex;
           justify-content: space-between;
           align-items: center;
+        }
+      }
+    }
+    &__sp {
+      transform: translateX(-100%);
+      background-color: $white-color;
+      height: calc(100vh - 50px);
+      padding: 50px 25px;
+      &.open {
+        display: block;
+        transform: translateX(0);
+        transition: 0.2s ease-in;
+      }
+      li {
+        width: 100%;
+        padding: 20px 0 10px;
+        border-bottom: 1px solid $black-color-01;
+
+        a {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          span {
+            font-size: 14px;
+            font-weight: 500;
+          }
+          svg {
+            width: 12px;
+            height: 12px;
+          }
+        }
+        &:first-child {
+          padding: 0 0 10px;
         }
       }
     }
