--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -14,7 +14,7 @@ $font-family: 'Noto Sans JP','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic P
 
 // カラー
 
-$primary-color: #000;
+$primary-color: #0297B5;
 $black_color: #191919;
 $black-color-01: #121212;
 
@@ -29,6 +29,10 @@ $gradient-bg-2: transparent linear-gradient(90deg, #111111 0%, #444444 100%) 0% 
 
 $blue-color: #0497B5;
 $blue-color-1: #00758C;
+$blue-color-2: #E5F4F8;
+
+$green-color: #007477;
+$green-color-1: #53D2B2;
 
 $gray-color: #F1F1F1;
 $gray-color-2: #A7A7A7;
@@ -38,6 +42,7 @@ $gray-color-5: #666666;
 $gray-color-6: #00000029;
 $gray-color-7: #EEEEEE;
 
+$yellow-color: #FFFF01;
 
 // テキストカラー
 
