--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -478,7 +478,7 @@
     &--btn {
       width: 300px;
       @media #{$sp} {
-        width: 100%;
+        width: 100% !important;
       }
     }
   }
@@ -1007,13 +1007,14 @@
   width: auto;
 
   .card {
-    max-width: 380px;
     border: 0;
-    padding: 30px 34px 30px 34px;
-    background-color: #e1e1e1;
-    box-shadow: none;
+    padding: 31px 30px 34px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 20px #00000029;
     height: 100%;
     text-align: left;
+    display: flex;
+    flex-direction: column;
 
     .ttl-quaternary-container {
       display: flex;
@@ -1028,41 +1029,30 @@
         font-weight: 600;
         margin: 0;
         text-align: center;
-        color: #000;
+        color: $primary-color;
       }
     }
 
-    .circle-container {
-      margin: auto;
-      width: 138px;
-      height: 138px;
-      border-radius: 50%;
-      background-color: #3498db;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
-      font-size: 16px;
-      padding: 30px 0px;
-      background-color: #fff;
-      color: #000000;
-      border: 1px solid #747171;
-      margin-bottom: 30px;
-      font-weight: bold;
+    .card-image {
+      margin-bottom: 10px;
     }
 
-    .ttl-senary {
-      font-size: 16px;
-      font-weight: 400;
-      color: #000000;
-      margin-bottom: 30px;
+    .card-description {
+      margin-bottom: 18px;
+      flex-grow: 1;
+
+      &__detail {
+        display: flex;
+        align-items: baseline;
+        gap: 6px;
+      }
     }
 
     .circle-with-arrow {
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: #575757;
+      background-color: $primary-color;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1109,16 +1099,26 @@
         }
 
         .item__img {
+          // padding-top: 56.666666%;
+          position: relative;
+          width: 50%;
           max-width: 540px;
           max-height: 306px;
+          height: 306px;
           background-color: #fff;
           font-size: 16px;
           vertical-align: middle;
           background-color: #e1e1e1;
+          border-radius: 4px;
 
           img {
             width: 100%;
             height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            object-position: center;
+            object-fit: cover;
           }
         }
 
@@ -1157,6 +1157,12 @@
 .card-type8 {
   padding: 0;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  @media #{$sp} {
+    width: 100%;
+  }
 
   .card__box--ttl {
     padding: 10px 0;
@@ -1164,23 +1170,38 @@
     color: #fff;
     font-size: 16px;
     margin-bottom: 30px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .container {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    height: 185px;
     border: 0;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    flex-grow: 1;
+
+    @media #{$sp} {
+      padding: 0;
+      height: unset;
+      margin-bottom: 10px;
+    }
 
     .card__box-wrapper {
       flex-wrap: nowrap;
 
+      @media #{$tab} {
+        flex-direction: column;
+      }
+
       .credit-card02 {
-        max-width: 160px;
-        max-height: 101px;
+        @media #{$sp} {
+          width: 100%;
+        }
 
         .credit-card-img {
           width: 100%;
@@ -1200,6 +1221,10 @@
       }
     }
   }
+
+  .bondi_blue_outline_btn {
+    width: 100%;
+  }
 }
 
 // カード型 type9
@@ -1215,6 +1240,7 @@
     font-size: 16px;
     margin-bottom: 30px;
     font-weight: bold;
+    border-radius: 4px;
   }
 
   .card__box--ttl.card__box-ttl02 {
@@ -1229,13 +1255,18 @@
     .card__box-wrapper {
       flex-wrap: nowrap;
       margin-bottom: 30px;
+      gap: 10px;
+
+      @media #{$sp} {
+        flex-direction: column;
+      }
 
       .card__box-title {
         max-width: 345px;
 
         .ttl-terianry {
           text-align: left;
-          font-size: 20px;
+          font-size: 18px;
           font-weight: 600;
           letter-spacing: 2px;
         }
@@ -1264,20 +1295,41 @@
     }
 
     .card__box-wrapper.card__box__wrapper-right {
+      .card01 {
+        background: $primary-color 0% 0% no-repeat padding-box;
+      }
+
+      .card02 {
+        background: #24a4a4 0% 0% no-repeat padding-box;
+      }
+
       div {
         flex: 1;
-        padding: 34px 0;
         text-align: center;
-        border-radius: 17px;
+        border-radius: 3px;
         background-color: #e1e1e1;
+        color: #ffffff;
+        padding: 26px 10px;
+
+        @media #{$sp} {
+          width: 100%;
+        }
 
         dd {
           text-align: center;
+          font-size: 16px;
+          margin-bottom: 5px;
+        }
+
+        strong {
+          font-size: 32px;
+          color: $yellow-color;
         }
 
         .ttl-tertiary {
           font-size: 20px;
           font-weight: 600;
+          margin-bottom: 0;
 
           small {
             font-weight: 400;
@@ -1304,19 +1356,53 @@
     margin-bottom: 15px;
 
     .cat {
-      background-color: #111450;
+      position: relative;
+      color: $blue-color;
       font-weight: 600;
       font-size: 14px;
+      background-color: transparent;
+      border: 1px solid transparent;
+
+      &::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: $primary-color;
+        border-radius: 25px;
+        opacity: 0.1;
+      }
     }
   }
 
   .ttl-quaternary {
-    text-align: left;
-    font-size: 20px;
+    position: relative;
+    font-size: 15px;
     font-weight: 600;
     min-width: 315px;
-    margin-bottom: 20px;
-    height: 60px;
+    min-height: 70px;
+    margin-bottom: 25px;
+    background-color: $primary-color;
+    border-radius: 3px;
+    color: #ffffff;
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::before {
+      position: absolute;
+      content: "\A";
+      top: calc(100% - 1px);
+      left: calc(50% - 15px);
+      width: 0;
+      height: 0;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-top: 10px solid $primary-color;
+    }
   }
 
   .ttl-quinary {
@@ -1335,7 +1421,7 @@
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 4;
   }
 }
 
@@ -1973,7 +2059,7 @@
       }
     }
   }
-  @media #{$sp}{
+  @media #{$sp} {
     padding: 30px 0;
   }
 }
@@ -2473,7 +2559,7 @@
     left: 0;
     right: 0;
     top: -20px;
-    background-color: #000;
+    background-color: $primary-color;
     font-size: 16px;
     color: #fff;
     max-width: 480px;
@@ -2481,12 +2567,17 @@
   }
 
   .inquiry__box {
-    background-color: #e1e1e1;
+    background-color: $blue-color-2;
+    border-radius: 4px;
     padding: 10px 20px;
     width: 100%;
     margin: 0;
     justify-content: flex-start;
     margin-bottom: 30px;
+
+    @media #{$sp} {
+      flex-direction: column;
+    }
 
     .inquiry__box--btn {
       width: auto;
@@ -2778,6 +2869,12 @@
   max-width: 160px;
   max-height: 101px;
 
+  @media #{$sp} {
+    max-width: unset;
+    max-height: unset;
+  }
+  width: 100%;
+
   .credit-card-img {
     width: 100%;
     height: 100%;
@@ -2795,6 +2892,22 @@
     padding-left: 15px;
     margin-bottom: 10px;
 
+    strong {
+      position: relative;
+      z-index: 1;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        height: 50%;
+        width: 100%;
+        background-color: $yellow-color;
+        z-index: -1;
+      }
+    }
+
     &::before {
       content: "•";
       position: absolute;
@@ -2802,6 +2915,7 @@
       top: -9px;
       font-size: 24px;
       padding-right: 5px;
+      color: $primary-color;
     }
   }
 }
